--- a/pricing.html
+++ b/pricing.html
@@ -42,29 +42,27 @@
           <!-- Starter -->
           <div class="card card-price">
             <h2 class="card-title">Starter</h2>
-            <p class="price">$80</p>
+            <p class="price">$20</p>
             <p class="card-body">
               Best for small businesses, first-time promos, and testing what works.
             </p>
             <ul class="list">
-              <li>3× cinematic video ads, ~10 seconds each</li>
+              <li> 2x cinematic video ads, ~10 seconds each</li>
               <li>Optimized for vertical social platforms (Reels, TikTok, Shorts)</li>
               <li>Tailored visuals and messaging to match your brand</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Starter Ad</a>
           </div>
-
           <!-- Growth -->
           <div class="card card-price card-highlight">
             <h2 class="card-title">Growth</h2>
-            <p class="price">$250</p>
+            <p class="price">$50</p>
             <p class="card-body">
               For brands ready to look more professional online and across social platforms.
             </p>
             <ul class="list">
               <li>1× main cinematic ad, ~30 seconds</li>
-              <li>2× short cinematic ads, ~10 seconds each</li>
-              <li>Cohesive concept and visuals across all three videos</li>
+              <li>2× short cinematic ads, ~10 seconds</li>
             </ul>
             <a href="contact.html" class="btn btn-primary">Start Growth</a>
           </div>
@@ -72,45 +70,41 @@
           <!-- Authority -->
           <div class="card card-price">
             <h2 class="card-title">Authority</h2>
-            <p class="price">$550</p>
+            <p class="price">$120</p>
             <p class="card-body">
               For launches and brands that want a more serious, elevated presence.
             </p>
             <ul class="list">
-              <li>1× flagship cinematic ad, ~60 seconds</li>
-              <li>2× supporting cinematic ads, ~20 seconds each</li>
-              <li>Story-driven structure to showcase brand, offer, and key benefits</li>
+              <li>2×  cinematic ad, ~30 seconds</li>
+              <li>1× supporting cinematic ads, ~10 seconds each</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Authority</a>
           </div>
-
           <!-- Domination -->
           <div class="card card-price">
             <h2 class="card-title">Domination</h2>
-            <p class="price">$750</p>
+            <p class="price">$200</p>
             <p class="card-body">
               For brands that want a full campaign: multiple ads, multiple angles, multi-platform.
             </p>
             <ul class="list">
-              <li>1× cinematic ad, ~90 seconds</li>
-              <li>2× cinematic ads, ~30 seconds each</li>
-              <li>3× short cinematic ads, ~10 seconds each</li>
+              <li>2× cinematic ad, ~ 60 seconds</li>
+              <li>1× cinematic ads, ~30 seconds each</li>
+              <li>1× short cinematic ads, ~10 seconds each</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Domination</a>
           </div>
         </div>
-
         <!-- Retainer -->
         <div class="retainer">
           <h2 class="section-title">Monthly Retainer: AuraPro Ad Engine</h2>
-          <p class="retainer-price">$2,500 / Month</p>
+          <p class="retainer-price">$1,500 / Month</p>
           <p class="section-intro">
             For brands that want consistent, cinematic content on a monthly basis.
           </p>
           <ul class="list list-inline">
             <li>Ongoing campaign planning <strong>or</strong> 2 premium commercials each month</li>
             <li>3 short ads each month ~30 seconds each</li>
-            <li>Stronger hooks and visuals</li>
           </ul>
           <div class="centered">
             <a href="contact.html" class="btn btn-primary">Apply for Retainer</a>
