--- a/index.html
+++ b/index.html
@@ -61,77 +61,6 @@
 
   </div>
 </section>
-
-    <!-- FREE GENERATOR CARD -->
-    <div class="hero-generator card">
-      <h3 class="card-title">Free Ad Generator</h3>
-      <p class="card-body" style="opacity:.9;">
-        Type your idea, or let Aura recommend a concept based on your business.
-      </p>
-
-      <div class="gen-tabs">
-        <button class="gen-tab active" data-tab="custom">I’ll Type It</button>
-        <button class="gen-tab" data-tab="recommend">AI Recommend</button>
-      </div>
-
-      <!-- Custom input -->
-      <div class="gen-panel active" id="panel-custom">
-        <label class="gen-label">What are you promoting?</label>
-        <textarea id="genCustomInput" class="gen-input" rows="4"
-          placeholder="Example: Grand opening for my barbershop this Saturday. $25 cuts, free lineup with appointment..."></textarea>
-
-        <button id="btnGenerateFromCustom" class="btn btn-primary gen-btn">
-          Generate My Concept
-        </button>
-      </div>
-
-      <!-- Recommend input -->
-      <div class="gen-panel" id="panel-recommend">
-        <label class="gen-label">Business type</label>
-        <input id="bizType" class="gen-input" placeholder="Example: Barbershop / Dance studio / Restaurant">
-
-        <label class="gen-label">Offer / service</label>
-        <input id="offer" class="gen-input" placeholder="Example: $25 haircuts / Intro class $10 / Catering">
-
-        <label class="gen-label">Goal</label>
-        <select id="goal" class="gen-input">
-          <option value="sales">Get more sales</option>
-          <option value="bookings">Get more bookings</option>
-          <option value="awareness">Brand awareness</option>
-          <option value="event">Promote an event</option>
-        </select>
-
-        <label class="gen-label">Vibe</label>
-        <select id="vibe" class="gen-input">
-          <option value="cinematic">Cinematic</option>
-          <option value="luxury">Luxury</option>
-          <option value="energetic">Energetic</option>
-          <option value="minimal">Minimal / Clean</option>
-        </select>
-
-        <button id="btnGenerateRecommended" class="btn btn-primary gen-btn">
-          Recommend a Concept
-        </button>
-      </div>
-
-      <div class="gen-output-wrap">
-        <label class="gen-label">Your free concept + prompt</label>
-        <textarea id="genOutput" class="gen-output" rows="8" readonly
-          placeholder="Your concept will appear here..."></textarea>
-
-        <div class="gen-actions">
-          <button id="btnCopy" class="btn btn-outline">Copy</button>
-          <a id="btnClaimFree" class="btn btn-primary" href="contact.html">Get your free generation</a>
-        </div>
-
-        <p class="gen-note">
-          Tip: This generates a concept + Sora-ready prompt. Final video generation is delivered after confirmation.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
-
     <!-- Why AuraPro Section -->
     <section class="section">
       <div class="container">
@@ -209,25 +138,25 @@
         <div class="grid grid-3 pricing-preview">
           <div class="card card-price">
             <h3 class="card-title">Starter</h3>
-            <p class="price">$80</p>
+            <p class="price">$40</p>
             <p class="card-body">
-              3 short cinematic ads to introduce your brand, offer, or promotion.
+              2 cinematic ads w/ no watermark (10sec)  to introduce your brand, offer, or promotion.
             </p>
             <a href="pricing.html" class="btn btn-outline">View Details</a>
           </div>
           <div class="card card-price card-highlight">
-            <h3 class="card-title">Growth Campaign</h3>
-            <p class="price">$250</p>
+            <h3 class="card-title">Growth</h3>
+            <p class="price">$100</p>
             <p class="card-body">
-              One 30-second ad plus two short 10-second ads perfect for brands leveling up their online presence.
+              2x 30-second ads perfect for brands leveling up their online presence.
             </p>
             <a href="pricing.html" class="btn btn-primary">View Full Pricing</a>
           </div>
           <div class="card card-price">
             <h3 class="card-title">Domination Package</h3>
-            <p class="price">$750</p>
+            <p class="price">$500</p>
             <p class="card-body">
-              Multi-ad campaign, multi-platform approach, and creative direction to take over your niche.
+              2× cinematic ads, ~ 60 seconds 1× cinematic ad ~30 seconds, 1× cinematic ad ~10 seconds, Multi-ad campaign, multi-platform approach, and creative direction to take over your niche.
             </p>
             <a href="pricing.html" class="btn btn-outline">See All Packages</a>
           </div>
