--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <h3 class="card-title">Growth</h3>
             <p class="price">$100</p>
             <p class="card-body">
-              2x 30-second ads perfect for brands leveling up their online presence.
+              Two 30-second ads perfect for brands leveling up their online presence.
             </p>
             <a href="pricing.html" class="btn btn-primary">View Full Pricing</a>
           </div>
@@ -156,7 +156,10 @@
             <h3 class="card-title">Domination Package</h3>
             <p class="price">$500</p>
             <p class="card-body">
-              2× cinematic ads, ~ 60 seconds 1× cinematic ad ~30 seconds, 1× cinematic ad ~10 seconds, Multi-ad campaign, multi-platform approach, and creative direction to take over your niche.
+              2× cinematic ads, ~ 60 seconds 
+              1× cinematic ad ~30 seconds
+              1× cinematic ad ~10 seconds
+              Multi-ad campaign, multi-platform approach, and creative direction to take over your niche.
             </p>
             <a href="pricing.html" class="btn btn-outline">See All Packages</a>
           </div>
