--- a/pricing.html
+++ b/pricing.html
@@ -42,7 +42,7 @@
           <!-- Starter -->
           <div class="card card-price">
             <h2 class="card-title">Starter</h2>
-            <p class="price">$20</p>
+            <p class="price">$40</p>
             <p class="card-body">
               Best for small businesses, first-time promos, and testing what works.
             </p>
@@ -56,7 +56,7 @@
           <!-- Growth -->
           <div class="card card-price card-highlight">
             <h2 class="card-title">Growth</h2>
-            <p class="price">$50</p>
+            <p class="price">$100</p>
             <p class="card-body">
               For brands ready to look more professional online and across social platforms.
             </p>
@@ -70,7 +70,7 @@
           <!-- Authority -->
           <div class="card card-price">
             <h2 class="card-title">Authority</h2>
-            <p class="price">$120</p>
+            <p class="price">$200</p>
             <p class="card-body">
               For launches and brands that want a more serious, elevated presence.
             </p>
@@ -83,7 +83,7 @@
           <!-- Domination -->
           <div class="card card-price">
             <h2 class="card-title">Domination</h2>
-            <p class="price">$200</p>
+            <p class="price">$500</p>
             <p class="card-body">
               For brands that want a full campaign: multiple ads, multiple angles, multi-platform.
             </p>
@@ -104,7 +104,8 @@
           </p>
           <ul class="list list-inline">
             <li>Ongoing campaign planning <strong>or</strong> 2 premium commercials each month</li>
-            <li>3 short ads each month ~30 seconds each</li>
+            <li>3 ads each month ~30 seconds each</li>
+            <li>2 ads each month ~10 seconds each</li>
           </ul>
           <div class="centered">
             <a href="contact.html" class="btn btn-primary">Apply for Retainer</a>
