--- a/pricing.html
+++ b/pricing.html
@@ -75,8 +75,8 @@
               For launches and brands that want a more serious, elevated presence.
             </p>
             <ul class="list">
-              <li>2×  cinematic ad, ~30 seconds</li>
-              <li>1× supporting cinematic ads, ~10 seconds each</li>
+              <li>2× cinematic ad, ~30 seconds</li>
+              <li>2× cinematic ads, ~10 seconds each</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Authority</a>
           </div>
