--- a/index.html
+++ b/index.html
@@ -55,10 +55,6 @@
         <span class="badge">Fast Turnaround</span>
       </div>
     </div>
-
-    <!-- Generator card goes here -->
-    <!-- (keep the generator markup you added) -->
-
   </div>
 </section>
     <!-- Why AuraPro Section -->
@@ -148,7 +144,7 @@
             <h3 class="card-title">Growth</h3>
             <p class="price">$100</p>
             <p class="card-body">
-              Two 30-second ads perfect for brands leveling up their online presence.
+              Two 30-second ads and two 10-second ads perfect for brands leveling up their online presence.
             </p>
             <a href="pricing.html" class="btn btn-primary">View Full Pricing</a>
           </div>
