--- a/pricing.html
+++ b/pricing.html
@@ -47,7 +47,7 @@
               Best for small businesses, first-time promos, and testing what works.
             </p>
             <ul class="list">
-              <li> 2x cinematic video ads, ~10 seconds each</li>
+              <li> 2x cinematic video ads ~10 seconds each</li>
               <li>Optimized for vertical social platforms (Reels, TikTok, Shorts)</li>
               <li>Tailored visuals and messaging to match your brand</li>
             </ul>
@@ -61,8 +61,8 @@
               For brands ready to look more professional online and across social platforms.
             </p>
             <ul class="list">
-              <li>1× main cinematic ad, ~30 seconds</li>
-              <li>2× short cinematic ads, ~10 seconds</li>
+              <li>1× cinematic ad, ~30 seconds</li>
+              <li>2× cinematic ads, ~10 seconds each</li>
             </ul>
             <a href="contact.html" class="btn btn-primary">Start Growth</a>
           </div>
@@ -75,7 +75,7 @@
               For launches and brands that want a more serious, elevated presence.
             </p>
             <ul class="list">
-              <li>2× cinematic ad, ~30 seconds</li>
+              <li>2× cinematic ad, ~30 seconds each</li>
               <li>2× cinematic ads, ~10 seconds each</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Authority</a>
@@ -88,9 +88,9 @@
               For brands that want a full campaign: multiple ads, multiple angles, multi-platform.
             </p>
             <ul class="list">
-              <li>2× cinematic ad, ~ 60 seconds</li>
-              <li>1× cinematic ads, ~30 seconds each</li>
-              <li>1× short cinematic ads, ~10 seconds each</li>
+              <li>2× cinematic ad, ~ 60 seconds each</li>
+              <li>1× cinematic ads, ~30 seconds</li>
+              <li>1× short cinematic ads, ~10 seconds</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Domination</a>
           </div>
