--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
   </main>
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p> <span id="year"></span> AuraPro Ads</p>
+      <p> <span id="year"></span> 2025</p>
       <p class="footer-sub">AI-powered cinematic ads for modern brands.</p>
     </div>
     <script>
