--- a/survey.html
+++ b/survey.html
@@ -145,7 +145,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> AuraPro Ads</p>
+      <p> <span id="year"></span></p>
       <p class="footer-sub">AI-powered cinematic ads for modern brands.</p>
     </div>
     <script>
