--- a/pricing.html
+++ b/pricing.html
@@ -61,6 +61,7 @@
             <ul class="list">
               <li>1× cinematic ad, ~30 seconds</li>
               <li>2× cinematic ads, ~10 seconds each</li>
+              <li>Turnaround: 7 Days ~ Starts Upon Day of Purchase</li>
             </ul>
             <a href="contact.html" class="btn btn-primary">Start Growth</a>
           </div>
@@ -75,6 +76,7 @@
             <ul class="list">
               <li>2× cinematic ad, ~30 seconds each</li>
               <li>2× cinematic ads, ~10 seconds each</li>
+               <li>Turnaround: 7 Days ~ Starts Upon Day of Purchase</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Authority</a>
           </div>
@@ -89,6 +91,7 @@
               <li>2× cinematic ad, ~ 60 seconds each</li>
               <li>1× cinematic ads, ~30 seconds</li>
               <li>1× short cinematic ads, ~10 seconds</li>
+               <li>Turnaround: 14 Days ~ Starts Upon Day of Purchase</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Domination</a>
           </div>
@@ -104,6 +107,7 @@
             <li>Ongoing campaign planning <strong>or</strong> 2 premium commercials each month</li>
             <li>3 ads each month ~30 seconds each</li>
             <li>2 ads each month ~10 seconds each</li>
+             <li>Turnaround: 1 Month ~ Starts Upon Day of Purchase</li>
           </ul>
           <div class="centered">
             <a href="contact.html" class="btn btn-primary">Apply for Retainer</a>
