--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <h3 class="card-title">Starter</h3>
             <p class="price">$40</p>
             <p class="card-body">
-              2 cinematic ads w/ no watermark (10sec)  to introduce your brand, offer, or promotion.
+              2 cinematic ads w/ no watermark (10sec) to introduce your brand, offer, or promotion.
             </p>
             <a href="pricing.html" class="btn btn-outline">View Details</a>
           </div>
@@ -144,7 +144,9 @@
             <h3 class="card-title">Growth</h3>
             <p class="price">$100</p>
             <p class="card-body">
-              Two 30-second ads and two 10-second ads perfect for brands leveling up their online presence.
+              2x 30-second ads 
+              2x 10-second ads 
+              Perfect for brands leveling up their online presence.
             </p>
             <a href="pricing.html" class="btn btn-primary">View Full Pricing</a>
           </div>
