--- a/pricing.html
+++ b/pricing.html
@@ -47,7 +47,7 @@
             <ul class="list">
               <li> 2x cinematic video ads ~10 seconds each</li>
               <li>Optimized for vertical social platforms (Reels, TikTok, Shorts)</li>
-              <li>Tailored visuals and messaging to match your brand</li>
+              <li>Turnaround: 7 Days ~ Starts Upon Day of Purchase</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Starter Ad</a>
           </div>
