--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@ Fill out the short form with your business info, goals, and the package you want
 Our AI project director, Aura, reviews your submission and turns it into a clear cinematic concept tailored to your brand, offer, and audience based off your responses.</p>
 
 <p><strong>Step 3: Your Ads Enter Production</strong><br>
-Once your concept is set, your ad(s) move straight into production. You’ll get an email letting you know your AuraPro video ads are being generated.</p>
+Once your concept is set, your ad(s) move straight into production.</p>
 
 <p><strong>Step 4: Delivery & Quick Feedback</strong><br>
 Your completed ad(s) are delivered digitally and ready to post for social media, ads, website promotions, and launches. With your delivery email, you’ll also receive a quick survey to share feedback and help us keep leveling up AuraPro Ads.</p>
