--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,7 @@
       <div class="container">
         <h1 class="page-title">Get Your Ad Created</h1>
         <p class="section-intro">
-          Share a few details about your brand and what you want this ad to do. We’ll review and get back to you with next steps.
-        </p>
+          Share a few details about your brand and what you want this ad to do. Once paid we move straight into production.</p>
       </div>
     </section>
 
