--- a/contact.html
+++ b/contact.html
@@ -113,17 +113,7 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
   <label class="consent-toggle" for="consent_project">
     <input type="checkbox" id="consent_project" name="consent_project" value="Yes" required>
     <span class="consent-ui">
-      <span class="consent-title">Permission to Email</span>
-      <span class="consent-sub">I agree AuraPro Ads may email me about this request (updates, delivery, support).</span>
-    </span>
-  </label>
-
-  <!-- Optional marketing opt-in (recommended to keep separate) -->
-  <label class="consent-toggle consent-secondary" for="consent_marketing">
-    <input type="checkbox" id="consent_marketing" name="consent_marketing" value="Yes">
-    <span class="consent-ui">
-      <span class="consent-title">Optional: Offers & Tips</span>
-      <span class="consent-sub">You may also email me occasional promos and creative tips. Unsubscribe anytime.</span>
+      <span class="consent-sub">I give AuraPro Ads permission to email me about this request (updates, delivery, support).</span>
     </span>
   </label>
 </div>
