--- a/survey.html
+++ b/survey.html
@@ -132,7 +132,14 @@
                   required
                 ></textarea>
               </div>
-
+              <div class="form-group consent-group">
+  <label class="consent-toggle" for="consent_project">
+    <input type="checkbox" id="consent_project" name="consent_project" value="Yes" required>
+    <span class="consent-ui">
+      <span class="consent-sub">I give AuraPro Ads permission to email me about this request (Updates and Support).</span>
+    </span>
+  </label>
+</div>
               <button type="submit" class="btn btn-primary btn-full">
                 Submit Feedback
               </button>
