--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
         <a href="index.html" class="nav-link">Home</a>
         <a href="services.html" class="nav-link active">Services</a>
         <a href="pricing.html" class="nav-link">Pricing</a>
-        <a href="contact.html" class="nav-link nav-cta">Get Your Ad Created</a>
+        <a href="contact.html" class="nav-link">Get Your Ad Created</a>
         <a href="survey.html" class="nav-link">Take Our Survey</a>
       </nav>
     </div>
