--- a/terms.html
+++ b/terms.html
@@ -60,7 +60,7 @@
     <hr>
 
     <h2>4. Delivery Timeline</h2>
-    <p>Once approval is received, ads are delivered in <strong>less than 2 hours</strong>.</p>
+    <p>Once approval is received, ads are typically delivered in <strong>7-14 days upon purchase date</strong>.</p>
 
     <p>Delivery timeframes may vary slightly based on:</p>
     <ul>
