--- a/terms.html
+++ b/terms.html
@@ -258,7 +258,7 @@
                 For questions about these Terms or your order, contact AuraPro Ads:
               </p>
               <ul class="terms-list">
-                <li><strong>Intake page:</strong> <a href="contact.html">Get Your Ad Created</a></li>
+                <li><strong>Intake page:</strong> <a href="survey.html">Take Our Survey</a></li>
               </ul>
 
               <div class="terms-callout terms-callout-soft">
