--- a/services.html
+++ b/services.html
@@ -22,6 +22,7 @@
         <a href="pricing.html" class="nav-link">Pricing</a>
         <a href="contact.html" class="nav-link">Get Your Ad Created</a>
         <a href="survey.html" class="nav-link">Take Our Survey</a>
+        <a href="terms.html" class="nav-link">Terms of Use</a>
       </nav>
     </div>
   </header>
