--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
         <div class="grid grid-3 pricing-preview">
           <div class="card card-price">
             <h3 class="card-title">Starter</h3>
-            <p class="price">$40</p>
+            <p class="price">$50</p>
             <p class="card-body">
-              2 cinematic ads w/ no watermark (10sec) to introduce your brand, offer, or promotion.
+              1 cinematic ad w/ no watermark (30sec) to introduce your brand, offer, or promotion.
             </p>
             <a href="pricing.html" class="btn btn-outline">View Details</a>
           </div>
           <div class="card card-price card-highlight">
             <h3 class="card-title">Growth</h3>
-            <p class="price">$100</p>
+            <p class="price">$120</p>
             <p class="card-body">
               2x 30-second ads 
-              2x 10-second ads 
-              Perfect for brands leveling up their online presence.
+              1x 10-second ad
+              Perfect for brands leveling up their online presence. No Watermark.
             </p>
             <a href="pricing.html" class="btn btn-primary">View Full Pricing</a>
           </div>
@@ -154,10 +154,10 @@
             <h3 class="card-title">Domination Package</h3>
             <p class="price">$500</p>
             <p class="card-body">
-              2× cinematic ads, ~ 60 seconds 
+              1× cinematic ad, ~ 60 seconds 
               1× cinematic ad ~30 seconds
               1× cinematic ad ~10 seconds
-              Multi-ad campaign, multi-platform approach, and creative direction to take over your niche.
+              Multi-ad campaign, multi-platform approach, and creative direction to take over your niche. No Watermark.
             </p>
             <a href="pricing.html" class="btn btn-outline">See All Packages</a>
           </div>
