--- a/pricing.html
+++ b/pricing.html
@@ -41,12 +41,12 @@
           <!-- Starter -->
           <div class="card card-price">
             <h2 class="card-title">Starter</h2>
-            <p class="price">$40</p>
+            <p class="price">$60</p>
             <p class="card-body">
               Best for small businesses, first-time promos, and testing what works.
             </p>
             <ul class="list">
-              <li> 2x cinematic video ads ~10 seconds each</li>
+              <li> 1x cinematic video ads ~20 seconds</li>
               <li>Optimized for vertical social platforms (Reels, TikTok, Shorts)</li>
               <li>Turnaround: 7 Days ~ Starts Upon Day of Purchase</li>
             </ul>
@@ -55,13 +55,13 @@
           <!-- Growth -->
           <div class="card card-price card-highlight">
             <h2 class="card-title">Growth</h2>
-            <p class="price">$100</p>
+            <p class="price">$250</p>
             <p class="card-body">
               For brands ready to look more professional online and across social platforms.
             </p>
             <ul class="list">
-              <li>1× cinematic ad, ~30 seconds</li>
-              <li>2× cinematic ads, ~10 seconds each</li>
+              <li>2× cinematic ad, ~20 seconds</li>
+              <li>1× cinematic ads, ~10 seconds each</li>
               <li>Turnaround: 7 Days ~ Starts Upon Day of Purchase</li>
             </ul>
             <a href="contact.html" class="btn btn-primary">Start Growth</a>
@@ -70,7 +70,7 @@
           <!-- Authority -->
           <div class="card card-price">
             <h2 class="card-title">Authority</h2>
-            <p class="price">$200</p>
+            <p class="price">$555</p>
             <p class="card-body">
               For launches and brands that want a more serious, elevated presence.
             </p>
@@ -84,14 +84,15 @@
           <!-- Domination -->
           <div class="card card-price">
             <h2 class="card-title">Domination</h2>
-            <p class="price">$500</p>
+            <p class="price">$1,500</p>
             <p class="card-body">
               For brands that want a full campaign: multiple ads, multiple angles, multi-platform.
             </p>
             <ul class="list">
               <li>2× cinematic ad, ~ 60 seconds each</li>
-              <li>1× cinematic ads, ~30 seconds</li>
-              <li>1× short cinematic ads, ~10 seconds</li>
+              <li>1× cinematic ad, ~ 30 seconds</li>
+              <li>1x cinematic ad, ~ 20 seconds</li>
+              <li>1× short cinematic ads, ~ 10 seconds</li>
                <li>Turnaround: 14 Days ~ Starts Upon Day of Purchase</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Domination</a>
@@ -100,15 +101,13 @@
         <!-- Retainer -->
         <div class="retainer">
           <h2 class="section-title">Monthly Retainer: AuraPro Ad Engine</h2>
-          <p class="retainer-price">$1,500 / Month</p>
+          <p class="retainer-price">$3,500 / Month</p>
           <p class="section-intro">
             For brands that want consistent, cinematic content on a monthly basis.
           </p>
           <ul class="list list-inline">
-            <li>Ongoing campaign planning <strong>or</strong> 2 premium commercials each month</li>
-            <li>3 ads each month ~30 seconds each</li>
-            <li>2 ads each month ~10 seconds each</li>
-             <li>Turnaround: 1 Month ~ Starts Upon Day of Purchase</li>
+            <li>Ongoing campaign planning <strong>or</strong> 4x 60 seconds ads each month on command!</li>
+            <li>2x 20 second ads included</li>
           </ul>
           <div class="centered">
             <a href="contact.html" class="btn btn-primary">Apply for Retainer</a>
