--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
             <h3 class="card-title">Starter</h3>
             <p class="price">$60</p>
             <p class="card-body">
-              1 cinematic ad w/ no watermark (20sec) to introduce your brand, offer, or promotion.
+              1 cinematic ad w/ no watermark (20sec) to introduce your brand, offer, or promotion. No Watermark.
             </p>
             <a href="pricing.html" class="btn btn-outline">View Details</a>
           </div>
           <div class="card card-price card-highlight">
             <h3 class="card-title">Growth</h3>
-            <p class="price">$250</p>
+            <p class="price">$100</p>
             <p class="card-body">
-              2x 30-second ads 
+              2x 20-second ads 
               1x 10-second ad
               Perfect for brands leveling up their online presence. No Watermark.
             </p>
@@ -154,9 +154,9 @@
             <h3 class="card-title">Domination Package</h3>
             <p class="price">$1,500</p>
             <p class="card-body">
-              1× cinematic ad, ~ 60 seconds 
+              2× cinematic ad, ~ 60 seconds 
               1× cinematic ad ~30 seconds
-              1× cinematic ad ~10 seconds
+              1× cinematic ad ~20 seconds
               Multi-ad campaign, multi-platform approach, and creative direction to take over your niche. No Watermark.
             </p>
             <a href="pricing.html" class="btn btn-outline">See All Packages</a>
