--- a/contact.html
+++ b/contact.html
@@ -87,11 +87,11 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
                 <label for="package">Which package are you interested in?</label>
                 <select id="package" name="package" required>
                   <option value="Select a package">Choose one...</option>
-                  <option value="Starter ($40)">Starter ($40)</option>
-                  <option value="Growth ($100)">Growth ($100)</option>
-                  <option value="Authority ($200)">Authority ($200)</option>
-                  <option value="Domination ($500)">Domination ($500)</option>
-                  <option value="Retainer ($1,500 / Month)">Aura Engine Retainer ($1,500 / Month)</option>
+                  <option value="Starter ($60)">Starter ($60)</option>
+                  <option value="Growth ($135)">Growth ($135)</option>
+                  <option value="Authority ($555)">Authority ($555)</option>
+                  <option value="Domination ($1500)">Domination ($1500)</option>
+                  <option value="Retainer ($3,500 / Month)">Aura Engine Retainer ($3,500 / Month)</option>
                 </select>
               </div>
 
@@ -142,11 +142,11 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
       if (!form) return;
 
       const paypalLinks = {
-        "Starter ($40)": "https://www.paypal.com/ncp/payment/4294BTKQZR6SC",
-        "Growth ($100)": "https://www.paypal.com/ncp/payment/8A35HB7S5W9S6",
-        "Authority ($200)": "https://www.paypal.com/ncp/payment/JLGTLCGDZ75DC",
-        "Domination ($500)": "https://www.paypal.com/ncp/payment/WNBSBKNDM8PM2",
-        "Retainer ($1,500 / Month)": "https://www.paypal.com/ncp/payment/CL828ZYKKFZFQ"
+        "Starter ($60)": "https://www.paypal.com/ncp/payment/4294BTKQZR6SC",
+        "Growth ($135)": "",
+        "Authority ($555)": "",
+        "Domination ($1500)": "",
+        "Retainer ($3,500 / Month)": ""
       };
 
       form.addEventListener("submit", function (event) {
